--- a/views/feedbacks/index.ejs
+++ b/views/feedbacks/index.ejs
@@ -17,7 +17,7 @@
                 </div>
             </div>
             <% if (portfolio.feedbacks.length) { %>
-                <div class="feedback-list">
+                <div>
                     <% portfolio.feedbacks.forEach(feedback => { %>
                     <div class="card mb-3 feedback-card">
                         <div class="card-body">
