--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -22,7 +22,7 @@
           <a class="nav-link" href="/profile">My Profile</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/logout">Logout</a>
+          <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#logoutConfirmModal">Logout</a>
         </li>
       <% } else { %>
         <li class="nav-item">
