--- a/views/users/my_feedbacks.ejs
+++ b/views/users/my_feedbacks.ejs
@@ -46,7 +46,7 @@
                                     View Details <i class="fas fa-arrow-right ms-1"></i>
                                 </a>
                             </div>
-                            <a href="/portfolios/<%= feedback.portfolio._id %>" target="_blank"
+                            <a href="/portfolios/<%= feedback.portfolio._id %>/feedbacks/<%= feedback._id %>"
                                 class="mt-3 d-block">
                                 <div class="feedback-screenshot-container-full-width">
                                     <% if (feedback.portfolio.screenshot) { %>
