--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -16,6 +16,7 @@
   </main>
   <%- include('../partials/footer') %>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="/js/script.js"></script>
   <script>
     // Initialize tooltips
     var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
@@ -46,7 +47,7 @@
   <script>
     (function () {
       'use strict'
-      const forms = document.querySelectorAll('.needs-validation')
+      const forms = document.querySelectorAll('.feedback-form.needs-validation')
 
       forms.forEach(function (form) {
         const textareas = form.querySelectorAll('textarea[name^="feedback["]');
