--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -9,6 +9,8 @@
                 <a href="/portfolios" class="sidebar-icon w-100 text-center py-2" data-bs-toggle="tooltip" data-bs-placement="right" title="Portfolios"><i class="fas fa-th-large"></i></a>
                 <a href="/portfolios/new" class="sidebar-icon w-100 text-center py-2" data-bs-toggle="tooltip" data-bs-placement="right" title="Add New Portfolio"><i class="fas fa-plus-circle"></i></a>
                 <a href="/dashboard" class="sidebar-icon w-100 text-center py-2" data-bs-toggle="tooltip" data-bs-placement="right" title="Dashboard"><i class="fas fa-chart-line"></i></a>
+                <a href="/profile/myportfolios" class="sidebar-icon w-100 text-center py-2" data-bs-toggle="tooltip" data-bs-placement="right" title="My Portfolios"><i class="fas fa-briefcase"></i></a>
+                <a href="/profile/myfeedbacks" class="sidebar-icon w-100 text-center py-2" data-bs-toggle="tooltip" data-bs-placement="right" title="My Feedbacks"><i class="fas fa-reply-all"></i></a>
                 
             </div>
         </div>
@@ -40,12 +42,12 @@
                         </div>
 
                         <div class="d-flex justify-content-center gap-3 mb-4">
-                            <span class="badge bg-primary-subtle text-primary-emphasis rounded-pill px-3 py-2">
+                            <a href="/profile/myportfolios" class="badge bg-primary-subtle text-primary-emphasis rounded-pill px-3 py-2 text-decoration-none">
                                 <i class="fas fa-upload me-1"></i> Submissions: <%= userPortfolios.length %>
-                            </span>
-                            <span class="badge bg-primary-subtle text-primary-emphasis rounded-pill px-3 py-2">
+                            </a>
+                            <a href="/profile/myfeedbacks" class="badge bg-primary-subtle text-primary-emphasis rounded-pill px-3 py-2 text-decoration-none">
                                 <i class="fas fa-comments me-1"></i> Feedbacks Given: <%= userFeedbacks.length %>
-                            </span>
+                            </a>
                         </div>
 
                         <div class="d-grid">
